Fixed problems in layout of homepage

--- a/nexus9k/templates/home.html
+++ b/nexus9k/templates/home.html
@@ -15,118 +15,146 @@
   <div class="container">
     <div class="row">
       <!-- Featured Articles -->
-      <div class="col-md-7">
+      <div class="col-md-8">
         <div class="row">
-          <h4>
-            <span class="fa fa-graduation-cap"></span>
-            Featured Articles
-          </h4>
-          <hr>
+          <div class="col-xs-12">
+            <h4>
+              <span class="fa fa-graduation-cap"></span>
+              Featured Articles
+            </h4>
+            <hr>
+          </div>
+
         </div>
 
         <div class="row">
-          <div class="[ panel panel-default ] panel-google-plus">
-            <div class="panel-heading">
-              <img class="[ img-circle pull-left ]"
-                   src="https://devcentral.f5.com/profilepic.ashx?userid=30&amp;w=50&amp;h=50"
-                   alt="User icon">
+          <div class="col-xs-12">
 
-              <h3>Cisco offers ACI alternative for Nexus 9000</h3>
-              <h5><span>By John Doe</span> - <span>Jun 27, 2014</span></h5>
+            <div class="[ panel panel-default ] panel-google-plus">
+              <div class="panel-heading">
+                <img class="[ img-circle pull-left ]"
+                     src="https://devcentral.f5.com/profilepic.ashx?userid=30&amp;w=50&amp;h=50"
+                     alt="User icon">
+
+                <h3>Cisco offers ACI alternative for Nexus 9000</h3>
+                <h5><span>By John Doe</span> - <span>Jun 27, 2014</span></h5>
+              </div>
+              <div class="panel-body">
+                <p>Cisco is adding a new control plane capability to its Nexus 9000 switches for customers not yet
+                  opting for or needing a full-blown application policy infrastructure.</p>
+              </div>
+
             </div>
-            <div class="panel-body">
-              <p>Cisco is adding a new control plane capability to its Nexus 9000 switches for customers not yet opting for or needing a full-blown application policy infrastructure.</p>
+          </div>
+
+
+        </div>
+
+        <div class="row">
+          <div class="col-xs-12">
+            <div class="[ panel panel-default ] panel-google-plus">
+              <div class="panel-heading">
+                <img class="[ img-circle pull-left ]"
+                     src="https://devcentral.f5.com/profilepic.ashx?userid=32&amp;w=50&amp;h=50"
+                     alt="User icon">
+
+                <h3>ACI customers continue to steadily grow</h3>
+                <h5><span>By John Doe</span> - <span>Jun 27, 2014</span></h5>
+              </div>
+              <div class="panel-body">
+                <p>Cisco now has 1,700 customers for its Nexus 9000 switch and over 300 for its APIC controller, the
+                  central element of its Application Centric Infrastructure (ACI) programmable networking and SDN
+                  strategy..</p>
+              </div>
             </div>
           </div>
         </div>
 
         <div class="row">
-          <div class="[ panel panel-default ] panel-google-plus">
-            <div class="panel-heading">
-              <img class="[ img-circle pull-left ]"
-                   src="https://devcentral.f5.com/profilepic.ashx?userid=32&amp;w=50&amp;h=50"
-                   alt="User icon">
+          <div class="col-xs-12">
+            <div class="[ panel panel-default ] panel-google-plus">
+              <div class="panel-heading">
+                <img class="[ img-circle pull-left ]"
+                     src="https://devcentral.f5.com/profilepic.ashx?userid=34&amp;w=50&amp;h=50"
+                     alt="User icon">
 
-              <h3>ACI customers continue to steadily grow</h3>
-              <h5><span>By John Doe</span> - <span>Jun 27, 2014</span></h5>
-            </div>
-            <div class="panel-body">
-              <p>Cisco now has 1,700 customers for its Nexus 9000 switch and over 300 for its APIC controller, the central element of its Application Centric Infrastructure (ACI) programmable networking and SDN strategy..</p>
+                <h3>Converting NXOS Standalone Mode</h3>
+                <h5><span>By John Doe</span> - <span>Jun 27, 2014</span></h5>
+              </div>
+              <div class="panel-body">
+                <p>This article provides information on the Nexus 9000 (N9K) Series Switch Conversion process from NXOS
+                  standalone mode to ACI mode. This information applies to switches that are running a Cisco NX-OS
+                  release.</p>
+              </div>
             </div>
           </div>
+
         </div>
 
         <div class="row">
-          <div class="[ panel panel-default ] panel-google-plus">
-            <div class="panel-heading">
-              <img class="[ img-circle pull-left ]"
-                   src="https://devcentral.f5.com/profilepic.ashx?userid=34&amp;w=50&amp;h=50"
-                   alt="User icon">
+          <div class="col-xs-12">
+            <div class="[ panel panel-default ] panel-google-plus">
+              <div class="panel-heading">
+                <img class="[ img-circle pull-left ]"
+                     src="https://devcentral.f5.com/profilepic.ashx?userid=35&amp;w=50&amp;h=50"
+                     alt="User icon">
 
-              <h3>Converting NXOS Standalone Mode</h3>
-              <h5><span>By John Doe</span> - <span>Jun 27, 2014</span></h5>
-            </div>
-            <div class="panel-body">
-              <p>This article provides information on the Nexus 9000 (N9K) Series Switch Conversion process from NXOS standalone mode to ACI mode. This information applies to switches that are running a Cisco NX-OS release.</p>
+                <h3>Cisco Nexus 9000 Design and Configuration</h3>
+                <h5><span>By John Doe</span> - <span>Jun 27, 2014</span></h5>
+              </div>
+              <div class="panel-body">
+                <p>The vendor's ACI strategy is its answer to the growing SDN trend, and the Nexus 9000 lineup are key
+                  parts of the effort.</p>
+              </div>
             </div>
           </div>
-        </div>
 
-        <div class="row">
-          <div class="[ panel panel-default ] panel-google-plus">
-            <div class="panel-heading">
-              <img class="[ img-circle pull-left ]"
-                   src="https://devcentral.f5.com/profilepic.ashx?userid=35&amp;w=50&amp;h=50"
-                   alt="User icon">
-
-              <h3>Cisco Nexus 9000 Design and Configuration</h3>
-              <h5><span>By John Doe</span> - <span>Jun 27, 2014</span></h5>
-            </div>
-            <div class="panel-body">
-              <p>The vendor's ACI strategy is its answer to the growing SDN trend, and the Nexus 9000 lineup are key parts of the effort.</p>
-            </div>
-          </div>
         </div>
       </div>
 
       <!-- Trending Questions -->
-      <div class="col-md-offset-1 col-md-4">
+      <div class="col-md-4">
         <div class="row">
-          <h4>
-            <span class="fa fa-fire"></span>
-            Trending Questions
-          </h4>
-          <hr>
+          <div class="col-xs-12">
+            <h4>
+              <span class="fa fa-fire"></span>
+              Trending Questions
+            </h4>
+            <hr>
+          </div>
         </div>
         <div class="row">
-          <ul class="list-group">
+          <div class="col-xs-12">
+            <ul class="list-group">
 
-            <li class="list-group-item">
-              Nexus 9000 Quick Deploy
-              <span class="badge"><span class="fa fa-angle-up">14</span></span>
-            </li>
-            <li class="list-group-item">
-              Best features of the Nexus 9000?
-              <span class="badge"><span class="fa fa-angle-up">30</span></span>
-            </li>
-            <li class="list-group-item">
-              Sampling at exatly Nyquist rate?
-              <div class="badge"><span class="fa fa-angle-up">18</span></div>
-            </li>
-            <li class="list-group-item">
-              Getting an error in Odoo 8 Products?
-              <span class="badge"><span class="fa fa-angle-up">16</span></span>
-            </li>
-            <li class="list-group-item">
-              C - Sending parameters in parallel using websocket
-              <span class="badge"><span class="fa fa-angle-up">14</span></span>
-            </li>
-            <li class="list-group-item">
-              Query takes time to Execute?
-              <span class="badge"><span class="fa fa-angle-up">10</span></span>
-            </li>
+              <li class="list-group-item">
+                Nexus 9000 Quick Deploy
+                <span class="badge"><span class="fa fa-angle-up">14</span></span>
+              </li>
+              <li class="list-group-item">
+                Best features of the Nexus 9000?
+                <span class="badge"><span class="fa fa-angle-up">30</span></span>
+              </li>
+              <li class="list-group-item">
+                Sampling at exatly Nyquist rate?
+                <div class="badge"><span class="fa fa-angle-up">18</span></div>
+              </li>
+              <li class="list-group-item">
+                Getting an error in Odoo 8 Products?
+                <span class="badge"><span class="fa fa-angle-up">16</span></span>
+              </li>
+              <li class="list-group-item">
+                C - Sending parameters in parallel using websocket
+                <span class="badge"><span class="fa fa-angle-up">14</span></span>
+              </li>
+              <li class="list-group-item">
+                Query takes time to Execute?
+                <span class="badge"><span class="fa fa-angle-up">10</span></span>
+              </li>
 
-          </ul>
+            </ul>
+          </div>
+
         </div>
 
       </div>
