--- a/nexus9k/templates/modules/header.html
+++ b/nexus9k/templates/modules/header.html
@@ -27,7 +27,7 @@
         <li><a href="#">Tools</a></li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="#">SignIn</a></li>
+        <li><a href="{% url 'login' %}">SignIn</a></li>
 
       </ul>
       <form class="navbar-form navbar-right" role="search">
