--- a/nexus9k/templates/registration/header.html
+++ b/nexus9k/templates/registration/header.html
@@ -1,5 +1,5 @@
-  <header class="light" id="header">
-  <div class="content">
+<header id="register-header">
+</br></br>
     <div class="row">
       <div class='col-xs-12 text-center'>
         <a id="logo-lg" href="{% url 'home' %}"><img src="{{STATIC_URL}}img/cisco-logo.png"/> </a>
@@ -8,5 +8,4 @@
         </div>
       <div></div>
     </div>
-  </div>
 </header>
