--- a/nexus9k/templates/scripts.html
+++ b/nexus9k/templates/scripts.html
@@ -4,173 +4,301 @@
 {% block site-title %}Scripts{% endblock %}
 
 {% block content %}
-<div id="content">
-  <div class="content">
-    <div class="columns">
-      <div class="column-main">
-        <h2>Recent Scripts</h2>
-        <ul class="feed related scripts">
-          <li>
-            <span class="votes"><i class="fa fa-angle-up"></i> 42</span><a class="question" href="{% url 'script' %}">Nexus 9000 Quick Deploy</a>
-            <div style="overflow: hidden;">
-              <small>by <a href="{% url 'profile' %}">Mark Benton</a> &middot; Aug 15, 2015</small>
-              <div style="margin-bottom: 4px;">
-                Cisco Nexus 9000 Switches provide the foundation for Application Centric Infrastructure, delivering scalability, performance, and exceptional energy efficiency.
-              </div>
-              <ul class="row tagline">
-                <li>
-                  <a href="#" class="button">Download</a>
-                  <span>Downloaded: 72 times</span>
-                  <span>Tags: Switches, Python</span>
-                </li>
-              </ul>
-            </div>
-          </li>
-          <li>
-            <span class="votes"><i class="fa fa-angle-up"></i> 42</span><a class="question" href="{% url 'script' %}">Nexus 9000 Quick Deploy</a>
-            <div style="overflow: hidden;">
-              <small>by <a href="{% url 'profile' %}">Mark Benton</a> &middot; Aug 15, 2015</small>
-              <div style="margin-bottom: 4px;">
-                Cisco Nexus 9000 Switches provide the foundation for Application Centric Infrastructure, delivering scalability, performance, and exceptional energy efficiency.
-              </div>
-              <ul class="row tagline">
-                <li>
-                  <a href="#" class="button">Download</a>
-                  <span>Downloaded: 72 times</span>
-                  <span>Tags: Switches, Python</span>
-                </li>
-              </ul>
-            </div>
-          </li>
-          <li>
-            <span class="votes"><i class="fa fa-angle-up"></i> 42</span><a class="question" href="{% url 'script' %}">Nexus 9000 Quick Deploy</a>
-            <div style="overflow: hidden;">
-              <small>by <a href="{% url 'profile' %}">Mark Benton</a> &middot; Aug 15, 2015</small>
-              <div style="margin-bottom: 4px;">
-                Cisco Nexus 9000 Switches provide the foundation for Application Centric Infrastructure, delivering scalability, performance, and exceptional energy efficiency.
-              </div>
-              <ul class="row tagline">
-                <li>
-                  <a href="#" class="button">Download</a>
-                  <span>Downloaded: 72 times</span>
-                  <span>Tags: Switches, Python</span>
-                </li>
-              </ul>
-            </div>
-          </li>
-          <li>
-            <span class="votes"><i class="fa fa-angle-up"></i> 42</span><a class="question" href="{% url 'script' %}">Nexus 9000 Quick Deploy</a>
-            <div style="overflow: hidden;">
-              <small>by <a href="{% url 'profile' %}">Mark Benton</a> &middot; Aug 15, 2015</small>
-              <div style="margin-bottom: 4px;">
-                Cisco Nexus 9000 Switches provide the foundation for Application Centric Infrastructure, delivering scalability, performance, and exceptional energy efficiency.
-              </div>
-              <ul class="row tagline">
-                <li>
-                  <a href="#" class="button">Download</a>
-                  <span>Downloaded: 72 times</span>
-                  <span>Tags: Switches, Python</span>
-                </li>
-              </ul>
-            </div>
-          </li>
-          <li>
-            <span class="votes"><i class="fa fa-angle-up"></i> 42</span><a class="question" href="{% url 'script' %}">Nexus 9000 Quick Deploy</a>
-            <div style="overflow: hidden;">
-              <small>by <a href="{% url 'profile' %}">Mark Benton</a> &middot; Aug 15, 2015</small>
-              <div style="margin-bottom: 4px;">
-                Cisco Nexus 9000 Switches provide the foundation for Application Centric Infrastructure, delivering scalability, performance, and exceptional energy efficiency.
-              </div>
-              <ul class="row tagline">
-                <li>
-                  <a href="#" class="button">Download</a>
-                  <span>Downloaded: 72 times</span>
-                  <span>Tags: Switches, Python</span>
-                </li>
-              </ul>
-            </div>
-          </li>
-          <li>
-            <span class="votes"><i class="fa fa-angle-up"></i> 42</span><a class="question" href="{% url 'script' %}">Nexus 9000 Quick Deploy</a>
-            <div style="overflow: hidden;">
-              <small>by <a href="{% url 'profile' %}">Mark Benton</a> &middot; Aug 15, 2015</small>
-              <div style="margin-bottom: 4px;">
-                Cisco Nexus 9000 Switches provide the foundation for Application Centric Infrastructure, delivering scalability, performance, and exceptional energy efficiency.
-              </div>
-              <ul class="row tagline">
-                <li>
-                  <a href="#" class="button">Download</a>
-                  <span>Downloaded: 72 times</span>
-                  <span>Tags: Switches, Python</span>
-                </li>
-              </ul>
-            </div>
-          </li>
-          <li>
-            <span class="votes"><i class="fa fa-angle-up"></i> 42</span><a class="question" href="{% url 'script' %}">Nexus 9000 Quick Deploy</a>
-            <div style="overflow: hidden;">
-              <small>by <a href="{% url 'profile' %}">Mark Benton</a> &middot; Aug 15, 2015</small>
-              <div style="margin-bottom: 4px;">
-                Cisco Nexus 9000 Switches provide the foundation for Application Centric Infrastructure, delivering scalability, performance, and exceptional energy efficiency.
-              </div>
-              <ul class="row tagline">
-                <li>
-                  <a href="#" class="button">Download</a>
-                  <span>Downloaded: 72 times</span>
-                  <span>Tags: Switches, Python</span>
-                </li>
-              </ul>
-            </div>
-          </li>
-          <li>
-            <span class="votes"><i class="fa fa-angle-up"></i> 42</span><a class="question" href="{% url 'script' %}">Nexus 9000 Quick Deploy</a>
-            <div style="overflow: hidden;">
-              <small>by <a href="{% url 'profile' %}">Mark Benton</a> &middot; Aug 15, 2015</small>
-              <div style="margin-bottom: 4px;">
-                Cisco Nexus 9000 Switches provide the foundation for Application Centric Infrastructure, delivering scalability, performance, and exceptional energy efficiency.
-              </div>
-              <ul class="row tagline">
-                <li>
-                  <a href="#" class="button">Download</a>
-                  <span>Downloaded: 72 times</span>
-                  <span>Tags: Switches, Python</span>
-                </li>
-              </ul>
-            </div>
-          </li>
-        </ul>
-        <nav class="page-selector see-all">
-          <ul class="row">
-            <li><a href="#">1</a></li>
-            <li><a href="#">2</a></li>
-            <li><a href="#">3</a></li>
-            <li><a href="#">4</a></li>
-            <li><a href="#">...</a></li>
-            <li><a href="#">56</a></li>
-          </ul>
-        </nav>
-      </div>
-      <div class="column-side">
-        <h2>Top Scripts</h2>
-        <ul class="feed related">
-          <li><span class="votes"><i class="fa fa-angle-up"></i> 42</span><a href="{% url 'question' %}">Nexus 9000 Quick Deploy</a></li>
-          <li><span class="votes"><i class="fa fa-angle-up"></i> 30</span><a href="{% url 'question' %}">What are the best features of the Nexus 9000?</a></li>
-          <li><span class="votes"><i class="fa fa-angle-up"></i> 18</span><a href="{% url 'question' %}">Sampling at exatly Nyquist rate in Matlab?</a></li>
-          <li><span class="votes"><i class="fa fa-angle-up"></i> 16</span><a href="{% url 'question' %}">Getting an error in Odoo 8 Products Form Template?</a></li>
-          <li><span class="votes"><i class="fa fa-angle-up"></i> 14</span><a href="{% url 'question' %}">C - Sending parameters in parallel using websocket</a></li>
-          <li><span class="votes"><i class="fa fa-angle-up"></i> 10</span><a href="{% url 'question' %}">Query takes time to Execute?</a></li>
-        </ul>
-        <h2 style="margin-top: 30px">Frequently Downloaded</h2>
-        <ul class="feed related">
-          <li><span class="votes"><i class="fa fa-angle-up"></i> 42</span><a href="{% url 'question' %}">Nexus 9000 Quick Deploy</a></li>
-          <li><span class="votes"><i class="fa fa-angle-up"></i> 30</span><a href="{% url 'question' %}">What are the best features of the Nexus 9000?</a></li>
-          <li><span class="votes"><i class="fa fa-angle-up"></i> 18</span><a href="{% url 'question' %}">Sampling at exatly Nyquist rate in Matlab?</a></li>
-          <li><span class="votes"><i class="fa fa-angle-up"></i> 16</span><a href="{% url 'question' %}">Getting an error in Odoo 8 Products Form Template?</a></li>
-          <li><span class="votes"><i class="fa fa-angle-up"></i> 14</span><a href="{% url 'question' %}">C - Sending parameters in parallel using websocket</a></li>
-          <li><span class="votes"><i class="fa fa-angle-up"></i> 10</span><a href="{% url 'question' %}">Query takes time to Execute?</a></li>
-        </ul>
+  <div class="container">
+  <div class="row">
+  <div class="col-md-8">
+  <div class="row">
+    <div class="col-md-6">
+      <h4>Article Center</h4>
+    </div>
+    <div class="col-md-6">
+      <div class="form-group">
+        <div class="input-group">
+          <input type="text" class="form-control" placeholder="Search Scripts">
+                <span class="input-group-btn">
+                  <select class="btn">
+                    <option>All Scripts</option>
+                    <option>OS Management</option>
+                    <option>Miscellaneous</option>
+                    <option>Troubleshooting</option>
+                    <option>Monitoring</option>
+                  </select>
+                </span>
+        </div>
       </div>
     </div>
   </div>
-</div>
+  <div class="row col-xs-12">
+    <ul class="nav nav-tabs">
+      <li role="presentation" class="active"><a href="#">Recent</a></li>
+      <li role="presentation"><a href="#">Featured</a></li>
+    </ul>
+  </div>
+  <div class="row">
+    <div class="col-md-6">
+      <h5 class="script-title">
+        <a href="/script">Automate VLAN Creation</a>
+      </h5>
+      This script is to automate Vlan creation.
+      <div class="meta"><span class="text-muted">Category: </span> <a href="#">Config Management</a></div>
+    </div>
+    <div class="col-md-6 text-center">
+      <div class="status-box">
+        <small><strong>5.0(24)</strong></small>
+        <div class="text-muted">
+          <small>user ratings</small>
+        </div>
+      </div>
+      <div class="status-box">
+        <small><strong>245</strong></small>
+        <div class="text-muted">
+          <small>downloads</small>
+        </div>
+      </div>
+      <div class="status-box">
+        <small><strong>305</strong></small>
+        <div class="text-muted">
+          <small>views</small>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="row">
+    <div class="col-md-6">
+      <h5 class="script-title">
+        <a href="/script">Fix for FEX issues</a>
+      </h5>
+      This script is to fix FEX issues.
+
+      <div class="meta"><span class="text-muted">Category: </span> <a href="#">Troubleshooting</a></div>
+    </div>
+    <div class="col-md-6 text-center">
+      <div class="status-box">
+        <small><strong>5.0(24)</strong></small>
+        <div class="text-muted">
+          <small>user ratings</small>
+        </div>
+      </div>
+      <div class="status-box">
+        <small><strong>245</strong></small>
+        <div class="text-muted">
+          <small>downloads</small>
+        </div>
+      </div>
+      <div class="status-box">
+        <small><strong>305</strong></small>
+        <div class="text-muted">
+          <small>views</small>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="row">
+    <div class="col-md-6">
+      <h5 class="script-title">
+        <a href="/script">Add/Remove Software Patches</a>
+      </h5>
+      This script is to Add/Remove Software Patches.
+
+      <div class="meta"><span class="text-muted">Category: </span> <a href="#">OS Management</a></div>
+    </div>
+    <div class="col-md-6 text-center">
+      <div class="status-box">
+        <small><strong>5.0(24)</strong></small>
+        <div class="text-muted">
+          <small>user ratings</small>
+        </div>
+      </div>
+      <div class="status-box">
+        <small><strong>245</strong></small>
+        <div class="text-muted">
+          <small>downloads</small>
+        </div>
+      </div>
+      <div class="status-box">
+        <small><strong>305</strong></small>
+        <div class="text-muted">
+          <small>views</small>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="row">
+    <div class="col-md-6">
+      <h5 class="script-title">
+        <a href="/script">Critical Syslog Monitoring</a>
+      </h5>
+      This script to monitor Critical Syslog Errors.
+      <div class="meta"><span class="text-muted">Category: </span> <a href="#">Monitoring</a></div>
+    </div>
+    <div class="col-md-6 text-center">
+      <div class="status-box">
+        <small><strong>5.0(24)</strong></small>
+        <div class="text-muted">
+          <small>user ratings</small>
+        </div>
+      </div>
+      <div class="status-box">
+        <small><strong>245</strong></small>
+        <div class="text-muted">
+          <small>downloads</small>
+        </div>
+      </div>
+      <div class="status-box">
+        <small><strong>305</strong></small>
+        <div class="text-muted">
+          <small>views</small>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="row">
+    <div class="col-md-6">
+      <h5 class="script-title">
+        <a href="/script">Critical Syslog Monitoring</a>
+      </h5>
+      This script to monitor Critical Syslog Errors.
+      <div class="meta"><span class="text-muted">Category: </span> <a href="#">Monitoring</a></div>
+    </div>
+    <div class="col-md-6 text-center">
+      <div class="status-box">
+        <small><strong>5.0(24)</strong></small>
+        <div class="text-muted">
+          <small>user ratings</small>
+        </div>
+      </div>
+      <div class="status-box">
+        <small><strong>245</strong></small>
+        <div class="text-muted">
+          <small>downloads</small>
+        </div>
+      </div>
+      <div class="status-box">
+        <small><strong>305</strong></small>
+        <div class="text-muted">
+          <small>views</small>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="row">
+    <div class="col-md-6">
+      <h5 class="script-title">
+        <a href="/script">Critical Syslog Monitoring</a>
+      </h5>
+      This script to monitor Critical Syslog Errors.
+      <div class="meta"><span class="text-muted">Category: </span> <a href="#">Monitoring</a></div>
+    </div>
+    <div class="col-md-6 text-center">
+      <div class="status-box">
+        <small><strong>5.0(24)</strong></small>
+        <div class="text-muted">
+          <small>user ratings</small>
+        </div>
+      </div>
+      <div class="status-box">
+        <small><strong>245</strong></small>
+        <div class="text-muted">
+          <small>downloads</small>
+        </div>
+      </div>
+      <div class="status-box">
+        <small><strong>305</strong></small>
+        <div class="text-muted">
+          <small>views</small>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="row">
+    <div class="col-md-6">
+      <h5 class="script-title">
+        <a href="/script">Critical Syslog Monitoring</a>
+      </h5>
+      This script to monitor Critical Syslog Errors.
+      <div class="meta"><span class="text-muted">Category: </span> <a href="#">Monitoring</a></div>
+    </div>
+    <div class="col-md-6 text-center">
+      <div class="status-box">
+        <small><strong>5.0(24)</strong></small>
+        <div class="text-muted">
+          <small>user ratings</small>
+        </div>
+      </div>
+      <div class="status-box">
+        <small><strong>245</strong></small>
+        <div class="text-muted">
+          <small>downloads</small>
+        </div>
+      </div>
+      <div class="status-box">
+        <small><strong>305</strong></small>
+        <div class="text-muted">
+          <small>views</small>
+        </div>
+      </div>
+    </div>
+  </div>
+
+
+  </div>
+
+  <div class="col-md-4">
+    <div class="row">
+      <div class="col-xs-12">
+        <h4>Recent Activity</h4>
+        <hr/>
+        <div class="list-group">
+          <a href="#" class="list-group-item">
+            <h5 class="list-group-item-heading">Lori MacVittie commented on Converting NXOS Standalone:</h5>
+
+            <p class="list-group-item-text">How do you get it to boot without going to loader everytime?</p>
+          </a>
+          <a href="#" class="list-group-item">
+            <h5 class="list-group-item-heading">Lori MacVittie commented on Converting NXOS Standalone:</h5>
+
+            <p class="list-group-item-text">How do you get it to boot without going to loader everytime?</p>
+          </a>
+          <a href="#" class="list-group-item">
+            <h5 class="list-group-item-heading">Lori MacVittie commented on Converting NXOS Standalone:</h5>
+
+            <p class="list-group-item-text">How do you get it to boot without going to loader everytime?</p>
+          </a>
+        </div>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-xs-12">
+        <h4>Recent Comments</h4>
+        <hr/>
+        <div class="list-group">
+          <a href="#" class="list-group-item">
+            <h5 class="list-group-item-heading">Lori MacVittie commented on Converting NXOS Standalone:</h5>
+
+            <p class="list-group-item-text">How do you get it to boot without going to loader everytime?</p>
+          </a>
+          <a href="#" class="list-group-item">
+            <h5 class="list-group-item-heading">Lori MacVittie commented on Converting NXOS Standalone:</h5>
+
+            <p class="list-group-item-text">How do you get it to boot without going to loader everytime?</p>
+          </a>
+          <a href="#" class="list-group-item">
+            <h5 class="list-group-item-heading">Lori MacVittie commented on Converting NXOS Standalone:</h5>
+
+            <p class="list-group-item-text">How do you get it to boot without going to loader everytime?</p>
+          </a>
+        </div>
+      </div>
+    </div>
+
+
+  </div>
+  </div>
+  </div>
 {% endblock %}
