--- a/nexus9k/templates/modules/header.html
+++ b/nexus9k/templates/modules/header.html
@@ -21,7 +21,7 @@
       <ul class="nav navbar-nav">
         <li><a href="#">Products</a></li>
         <li><a href="{% url 'articles' %}">Article Center</a></li>
-        <li><a href="#">Scripts</a></li>
+        <li><a href="{% url 'scripts' %}">Scripts</a></li>
         <li><a href="{% url 'questions' %}">Discussion</a></li>
         <li><a href="#">Export Corner</a></li>
         <li><a href="#">Tools</a></li>
