created script page.

--- a/nexus9k/static/css/site.css
+++ b/nexus9k/static/css/site.css
@@ -152,3 +152,12 @@ hr{
     margin-bottom:3px;
     margin-top:12px;
 }
+
+.description > dl > dt{
+    margin-bottom: -1px;
+    font-size: 18px;
+}
+
+.description > dl > dd{
+    margin-bottom: 10px;
+}
