--- a/nexus9k/templates/script.html
+++ b/nexus9k/templates/script.html
@@ -1,64 +1,211 @@
 {% extends 'base.html' %}
 {% load staticfiles %}
 
-{% block title %}Home{% endblock %}
-{% block page-id %}scripts{% endblock %}
+{% block site-title %}Scripts{% endblock %}
 
 {% block content %}
-<div id="content">
-  <div class="content">
-    <div class="columns scripts">
-      <div class="column-main">
-        <h1>Nexus 9000 Deploy</h1>
-        <p>
-          I'm using google webfonts and they fine at super large font sizes, but at 18px, they look awful. I've read here and there that there are solutions for font smoothing, but I haven't found any where that explains it clearly and the few snippets I have found don't work at all.
-<br><br>
-My h4 looks awful in pretty much every browser, but Chrome is the worst. In Chrome, pretty much all of my fonts look terrible.
-We have been seeing the same feedback ("I don't know where to post a new message, so I've replied to this one...") for quite many topic hijackings as well as new topics (sic!) posted on our Community feedback board as well.
-<br><br>
-Can anyone point me in the right direction? Perhaps you know of a resource that explains this clearly? Thanks!<br>
-The new Cisco Nexus switches and connectivity options provide industry-leading multitenancy scalability and performance.
-<br><br>
-BGP EVPN VXLAN: The Nexus 9000 delivers the industry's first Border Gateway Protocol (BGP) EVPN-based control plane for VXLAN. It supports highly scalable multitenancy, optimized resource use, and traffic routing for transparent workload mobility.
-Nexus 9500 100 GE module: The 8-port module delivers one of the industry’s highest densities per chassis for high-performance backbone and router connectivity deployments.<br><br>
-Nexus 9300 100 GE module: The 4-port uplink connectivity to spine switches or routers supports both CompactFlash memory (CPF2) optics and Cisco CPAK 100 GE modules through converters.<br><br>
-Nexus 93120TX Switch: High scalability in a 2RU compact form factor includes 96 10-Gbps connectivity and 40 Gigabit Ethernet uplinks for leaf-spine or three-tier deployments.<br><br>
-DC power supplies (9500 and 9300): Further deployment flexibility has been added to the Nexus 9000 Series.
-        </p>
-        <ul class="row tagline">
-          <li>
-            <a href="#" class="button">Download</a>
-            <span>Downloaded: 72 times</span>
-            <span>Tags: Switches, Python</span>
-          </li>
-        </ul>
-        <div class="comments">No Comments</div>
-      </div>
-      <div class="column-side">
-        <div id="about-the-author">
-          <h2>About the Author</h2>
-          <div class="author-description">
-            <div style="overflow: hidden">
-              <a href="#" class="avatar">
-                <img class="avatar" src="{% static 'img/hobbes.jpg' %}">
-              </a>
-              <div class="items">
-                <div style="font-size: 18px"><a href="{% url 'profile' %}">Chris Flanagan</a></div>
-                <div>@cflanagan</div>
-                <div>
-                  <span class="votes"><i class="fa fa-angle-up"></i> 42</span>
+  <div class="container">
+    <div class="row">
+      <div class="col-md-8">
+        <div class="row">
+          <div class="col-xs-12">
+            <h3>
+              Automate Software Patch Management
+            </h3>
+            <span class="text-muted">
+              Uploaded Aug 20, 2015</span> &nbsp; · &nbsp; <i class="fa fa-area-chart"></i> 305 views
+            &nbsp; · &nbsp; <a href="#comments"><span class="glyphicon glyphicon-comment"></span> 4 Comments</a>
+            <hr/>
+            <div class="description">
+              <dl>
+                <dt>Description</dt>
+                <dd>This script is to automate software patch management.</dd>
+                <dt>File Path on Repository</dt>
+                <dd>nexusscripts/automate_softwate_patch.py</dd>
+                <dt>Platform</dt>
+                <dd>Nexus9000 C9396PX Chassis</dd>
+                <dt>NX-OS Release</dt>
+                <dd>6.1(2) I3(1)</dd>
+                <dt>Syntax</dt>
+                <dd>#python automate_softwate_patch.py</dd>
+                <dt>Input:</dt>
+                <dd>Patch ID</dd>
+                <dt>Output:</dt>
+                <dd>Result</dd>
+                <dt>Rating:</dt>
+                <dd>
+                  <span class="glyphicon glyphicon-star"></span>
+                  <span class="glyphicon glyphicon-star"></span>
+                  <span class="glyphicon glyphicon-star"></span>
+                  <span class="glyphicon glyphicon-star"></span>
+                </dd>
+              </dl>
+            </div>
+            <hr/>
+            <a class="" href="#">Download</a>
+
+            <div class="pull-right">
+              <span class="text-muted">Last commit by · </span>
+              <a href="#">mikecohen</a>
+            </div>
+            <hr/>
+            <div id="comments">
+              <h4>Comments (2)</h4>
+
+              <div class="row">
+                <div class="col-xs-12">
+                  <img src="https://devcentral.f5.com/profilepic.ashx?userid=114104&amp;w=64&amp;h=64"
+                       class="avatar">
+                  <h4>
+                    <a href="/article">Converting NXOS Standalone Mode</a>
+                  </h4>
+
+                  <p>
+                    This article provides information on the Nexus 9000 (N9K) Series Switch Conversion process from NXOS
+                    standalone mode to ACI mode. This information applies to switches that are running a Cisco NX-OS
+                    release.
+                  </p>
+                </div>
+              </div>
+              <div class="row">
+                <div class="col-xs-12">
+                  <img src="https://devcentral.f5.com/profilepic.ashx?userid=114104&amp;w=64&amp;h=64"
+                       class="avatar">
+                  <h4>
+                    <a href="/article">Converting NXOS Standalone Mode</a>
+                  </h4>
+
+                  <p>
+                    This article provides information on the Nexus 9000 (N9K) Series Switch Conversion process from NXOS
+                    standalone mode to ACI mode. This information applies to switches that are running a Cisco NX-OS
+                    release.
+                  </p>
+                </div>
+              </div>
+              <hr>
+              <div class="row">
+                <div class="col-xs-12">
+                  <h4>Post a comment</h4>
+
+                  <div class="form-group"><textarea class="form-control"></textarea></div>
+                  <div class="form-group">
+                    <button class="btn btn-primary">Comment</button>
+                  </div>
                 </div>
               </div>
             </div>
-            <p style="padding-bottom: 40px">
-              This section describes the different types of interfaces supported by the switch with references to chapters that contain more detailed information about configuring these interface types. The rest of the chapter describes configuration procedures for switch ports.
 
-Switch ports are Layer 2-only interfaces associated with a physical port. They are used for managing the physical interface and associated Layer 2 protocols and do not handle routing or bridging. A switch port can be an access port or a trunk port.
-            </p>
           </div>
         </div>
       </div>
+
+
+      <div class="col-md-4">
+        <div class="row">
+          <div class="col-xs-12">
+            <h4>Top Contributors</h4>
+            <hr/>
+            <div class="list-group bs-team">
+
+              <div class="list-group-item">
+
+                <a class="team-member" href="https://github.com/mdo">
+                  <img src="http://www.gravatar.com/avatar/bc4ab438f7a4ce1c406aadc688427f2c" alt="@mdo" width="32"
+                       height="32">
+                  <strong>Mark Otto</strong>
+                  <small>@mdo</small>
+                </a>
+              </div>
+
+              <div class="list-group-item">
+
+                <a class="team-member" href="https://github.com/fat">
+                  <img src="http://www.gravatar.com/avatar/a98244cbdacaf1c0b55499466002f7a8" alt="@fat" width="32"
+                       height="32">
+                  <strong>Jacob Thornton</strong>
+                  <small>@fat</small>
+                </a>
+              </div>
+
+              <div class="list-group-item">
+
+                <a class="team-member" href="https://github.com/cvrebert">
+                  <img src="http://www.gravatar.com/avatar/edec428c425453955f770095a7d26c50" alt="@cvrebert" width="32"
+                       height="32">
+                  <strong>Chris Rebert</strong>
+                  <small>@cvrebert</small>
+                </a>
+              </div>
+
+              <div class="list-group-item">
+
+                <a class="team-member" href="https://github.com/juthilo">
+                  <img src="http://www.gravatar.com/avatar/0f7dd3ce58a416be5685ea6194f82b11" alt="@juthilo" width="32"
+                       height="32">
+                  <strong>Julian Thilo</strong>
+                  <small>@juthilo</small>
+                </a>
+              </div>
+
+              <div class="list-group-item">
+
+                <a class="team-member" href="https://github.com/xhmikosr">
+                  <img src="http://www.gravatar.com/avatar/e37759b1ea0125d4e97b1e00b5eed26f" alt="@xhmikosr" width="32"
+                       height="32">
+                  <strong>XhmikosR</strong>
+                  <small>@xhmikosr</small>
+                </a>
+              </div>
+
+              <div class="list-group-item">
+
+                <a class="team-member" href="https://github.com/hnrch02">
+                  <img src="http://www.gravatar.com/avatar/0d53f5d3d3d28bd470f394d98f7ef48f" alt="@hnrch02" width="32"
+                       height="32">
+                  <strong>Heinrich Fenkart</strong>
+                  <small>@hnrch02</small>
+                </a>
+              </div>
+
+              <div class="list-group-item">
+
+                <a class="team-member" href="https://github.com/patrickhlauke">
+                  <img src="http://www.gravatar.com/avatar/357f279672db832fc41a5a2f36559fcb" alt="@patrickhlauke"
+                       width="32" height="32">
+                  <strong>Patrick H. Lauke</strong>
+                  <small>@patrickhlauke</small>
+                </a>
+              </div>
+
+            </div>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-xs-12">
+            <h4>Commit History</h4>
+            <hr/>
+            <div class="list-group">
+              <a href="#" class="list-group-item">
+                <h5 class="list-group-item-heading">Lori MacVittie commented on Converting NXOS Standalone:</h5>
+
+                <p class="list-group-item-text">How do you get it to boot without going to loader everytime?</p>
+              </a>
+              <a href="#" class="list-group-item">
+                <h5 class="list-group-item-heading">Lori MacVittie commented on Converting NXOS Standalone:</h5>
+
+                <p class="list-group-item-text">How do you get it to boot without going to loader everytime?</p>
+              </a>
+              <a href="#" class="list-group-item">
+                <h5 class="list-group-item-heading">Lori MacVittie commented on Converting NXOS Standalone:</h5>
+
+                <p class="list-group-item-text">How do you get it to boot without going to loader everytime?</p>
+              </a>
+            </div>
+          </div>
+        </div>
+
+
+      </div>
     </div>
   </div>
-</div>
 {% endblock %}
