--- a/nexus9k/templates/article.html
+++ b/nexus9k/templates/article.html
@@ -4,133 +4,155 @@
 {% block site-title %}Scripts{% endblock %}
 
 {% block content %}
-<div class="container">
-<div class="'row">
-  <div class="col-md-8">
-
-    <div class="col-xs-12 bkg-white">
-      <ol class="breadcrumb transparent">
-        <li><a href="#">Home</a></li>
-        <li><a href="#">Library</a></li>
-        <li class="active">Data</li>
-      </ol>
-    </div>
-    <div class="col-xs-12">
-    <div class="panel panel-default panel-nex ">
-      <div class="panel-heading bkg-white">
-        <h3>Cisco offers ACI alternative for Nexus 9000</h3>
-        <small>Uploaded Aug 20, 2015   ·   1,240 views</small>
-      </div>
-      <div class="panel-body">
-        <div class="entry-body">
-          <p class="description">
-            Cisco is adding a new control plane capability to its Nexus 9000 switches for customers not yet opting for or needing a full-blown application policy infrastructure.
-            <br>
-            <img class="stock" src="http://images.techhive.com/images/article/2015/02/nexus-9000-100566714-primary.idge.jpg">
-            <br>
-            Cisco’s BGP Control Plane for VXLAN is designed to appeal to operators of multitenant clouds looking for familiar BGP routing protocol features with which to scale their networks and make them more flexible for the demands of cloud networking. VXLAN, which scales VLAN segmentation to 16 million endpoints, does not specify a control plane and relies on a flood-and-learn mechanism for host and endpoint discovery, which can limit scalability, Cisco says.
-            <br><br>
-            BGP Control Plane for VXLAN can also serve as an alternative to Cisco’s Application Centric Infrastructure (ACI) control plane for the Nexus 9000s. The ACI fabric is based on VXLAN routing and an application policy controller called Application Policy Infrastructure Controller (APIC).
-            <br><br>
-            “This is definitely an alternative deployment model,” said Michael Cohen, director of product management in Cisco’s Insieme Networks Business Unit. “It’s a lighter weight (ACI) and some customers will just use this.”
-            <br><br>
-            BGP Control Plane for VXLAN runs on the standalone mode versions of the Nexus 9000, which requires a software upgrade to operate in ACI mode.
-            <br><br>
-            Cohen sidestepped questions on whether Cisco would now offer another controller just for the BGP Control Plane for VXLAN environments in addition to the ACI APIC and APIC Enterprise Module controllers it now offers.
-          </p>
-        </div>
-      </div>
-    </div>
-    </div>
-
-  </div>
-
-  <div class="col-md-4">
-
-    <div class="panel panel-default panel-nex">
-      <div class="panel-heading bkg-white">
-        ABOUT THE AUTHOR
-      </div>
-      <div class="panel-body bkg-grey">
+  <div class="container">
+    <div class="row">
+      <div class="col-md-8">
         <div class="row">
-          <div class="col-xs-3">
-            <div class="thumbnail">
-              <a href="/profile"><img src="https://www.gravatar.com/avatar/3923ecf12a5f69a3ddf00d4ba6192ac0?s=64&amp;d=identicon&amp;r=PG"></a>
+          <div class="col-xs-12">
+            <h3>
+              Cisco offers ACI alternative for Nexus 9000
+            </h3>
+            <span class="text-muted">
+              Uploaded Aug 20, 2015</span> &nbsp; · &nbsp; <i class="fa fa-area-chart"></i> 305 views
+            &nbsp; · &nbsp; <a href="#comments"><span class="glyphicon glyphicon-comment"></span> 4 Comments</a>
+            <hr/>
+            <p class="description">
+              Cisco is adding a new control plane capability to its Nexus 9000 switches for customers not yet opting for
+              or needing a full-blown application policy infrastructure.
+              <br>
+              <img class="img-thumbnail"
+                   src="http://images.techhive.com/images/article/2015/02/nexus-9000-100566714-primary.idge.jpg"
+                   class="stock">
+              <br>
+              Cisco’s BGP Control Plane for VXLAN is designed to appeal to operators of multitenant clouds looking for
+              familiar BGP routing protocol features with which to scale their networks and make them more flexible for
+              the demands of cloud networking. VXLAN, which scales VLAN segmentation to 16 million endpoints, does not
+              specify a control plane and relies on a flood-and-learn mechanism for host and endpoint discovery, which
+              can limit scalability, Cisco says.
+              <br><br>
+              BGP Control Plane for VXLAN can also serve as an alternative to Cisco’s Application Centric Infrastructure
+              (ACI) control plane for the Nexus 9000s. The ACI fabric is based on VXLAN routing and an application
+              policy controller called Application Policy Infrastructure Controller (APIC).
+              <br><br>
+              “This is definitely an alternative deployment model,” said Michael Cohen, director of product management
+              in Cisco’s Insieme Networks Business Unit. “It’s a lighter weight (ACI) and some customers will just use
+              this.”
+              <br><br>
+              BGP Control Plane for VXLAN runs on the standalone mode versions of the Nexus 9000, which requires a
+              software upgrade to operate in ACI mode.
+              <br><br>
+              Cohen sidestepped questions on whether Cisco would now offer another controller just for the BGP Control
+              Plane for VXLAN environments in addition to the ACI APIC and APIC Enterprise Module controllers it now
+              offers.
+            </p>
+            <hr/>
+
+            <div id="comments">
+              <h4>Comments (2)</h4>
+
+              <div class="row">
+                <div class="col-xs-12">
+                  <img src="https://devcentral.f5.com/profilepic.ashx?userid=114104&amp;w=64&amp;h=64"
+                       class="avatar">
+                  <h4>
+                    <a href="/article">Converting NXOS Standalone Mode</a>
+                  </h4>
+
+                  <p>
+                    This article provides information on the Nexus 9000 (N9K) Series Switch Conversion process from NXOS
+                    standalone mode to ACI mode. This information applies to switches that are running a Cisco NX-OS
+                    release.
+                  </p>
+                </div>
+              </div>
+              <div class="row">
+                <div class="col-xs-12">
+                  <img src="https://devcentral.f5.com/profilepic.ashx?userid=114104&amp;w=64&amp;h=64"
+                       class="avatar">
+                  <h4>
+                    <a href="/article">Converting NXOS Standalone Mode</a>
+                  </h4>
+
+                  <p>
+                    This article provides information on the Nexus 9000 (N9K) Series Switch Conversion process from NXOS
+                    standalone mode to ACI mode. This information applies to switches that are running a Cisco NX-OS
+                    release.
+                  </p>
+                </div>
+              </div>
+              <hr>
+              <div class="row">
+                <div class="col-xs-12">
+                  <h4>Post a comment</h4>
+
+                  <div class="form-group"><textarea class="form-control"></textarea></div>
+                  <div class="form-group">
+                    <button class="btn btn-primary">Comment</button>
+                  </div>
+                </div>
+              </div>
             </div>
+
           </div>
-          <div class="col-xs-9">
-            <div class="">
-              <a class="name" href="/profile">Zach Beane</a> <span class="points"><i class="fa fa-bolt"></i> 1,112</span><br>
-              <div class="occupation">Network Engineer</div>
+        </div>
+      </div>
+
+
+      <div class="col-md-4">
+        <div class="row">
+          <div class="col-xs-12">
+            <h4>About the Author</h4>
+
+            <div class="well">
+              <div class="user-about">
+                <img src="https://devcentral.f5.com/profilepic.ashx?userid=114104&amp;w=64&amp;h=64"
+                     class="avatar">
+                <h4>
+                  <a href="/article">Ned Stark</a>
+                </h4>
+                <span class="fa fa-bolt"></span><strong>2000</strong><br>
+                <span class="text-muted">Network Engineer</span>
+                <br>
+
+                <p>Zach has been immersed in the network world for over 20 years. He enjoys designing complex systems
+                  and building sustainable infastructure. He occasionally delves into web vulnerabilities and denial of
+                  service attacks evolving threat analysis, attack signature development and product hacking.</p>
+              </div>
+
+
             </div>
           </div>
         </div>
+        <div class="row">
 
-            <div class="bio-text">
-              Zach has been immersed in the network world for over 20 years. He enjoys designing complex systems
-              and building sustainable infastructure. He occasionally delves into web vulnerabilities
-              and denial of service attacks evolving threat analysis, attack signature development and product hacking.
+          <div class="col-xs-12">
+            <h4>Related Articles</h4>
+            <hr/>
+            <div class="list-group">
+
+              <div class="list-group-item">
+
+                <a href="https://github.com/mdo">
+                  <img src="http://www.gravatar.com/avatar/bc4ab438f7a4ce1c406aadc688427f2c" alt="@mdo" width="32"
+                       height="32">
+                  <strong>ACI customers continue to steadily grow</strong>
+                </a>
+              </div>
+
+              <div class="list-group-item">
+
+                <a href="https://github.com/fat">
+                  <img src="http://www.gravatar.com/avatar/a98244cbdacaf1c0b55499466002f7a8" alt="@fat" width="32"
+                       height="32">
+                  <strong>Converting NXOS Standalone Mode</strong>
+                </a>
+              </div>
+
+
             </div>
-            <div class="read-more">
-              <a href="#">Read more from Zach Beane »</a>
-            </div>
+          </div>
+        </div>
       </div>
     </div>
-
-
-    <div class="panel panel-default panel-nex">
-      <div class="panel-heading bkg-white">
-        RELATED ARTICLES
-      </div>
-      <div class="panel-body bkg-grey">
-        <ul class="list-group">
-          <li class="list-group-item clearfix">
-              <div class="col-xs-3">
-                <a href="/profile"><img src="https://www.gravatar.com/avatar/3923ecf12a5f69a3ddf00d4ba6192ac0?s=64&amp;d=identicon&amp;r=PG"></a>
-              </div>
-              <div class="col-xs-9">
-                <a class="name" href="/profile">ACI customers continue to steadily grow</a>
-              </div>
-          </li>
-          <li class="list-group-item clearfix">
-              <div class="col-xs-3">
-                <a href="/profile"><img src="https://www.gravatar.com/avatar/3923ecf12a5f69a3ddf00d4ba6192ac0?s=64&amp;d=identicon&amp;r=PG"></a>
-              </div>
-              <div class="col-xs-9">
-                <a class="name" href="/profile">ACI customers continue to steadily grow</a>
-              </div>
-          </li>
-          <li class="list-group-item clearfix">
-              <div class="col-xs-3">
-                <a href="/profile"><img src="https://www.gravatar.com/avatar/3923ecf12a5f69a3ddf00d4ba6192ac0?s=64&amp;d=identicon&amp;r=PG"></a>
-              </div>
-              <div class="col-xs-9">
-                <a class="name" href="/profile">ACI customers continue to steadily grow</a>
-              </div>
-          </li>
-          <li class="list-group-item clearfix">
-              <div class="col-xs-3">
-                <a href="/profile"><img src="https://www.gravatar.com/avatar/3923ecf12a5f69a3ddf00d4ba6192ac0?s=64&amp;d=identicon&amp;r=PG"></a>
-              </div>
-              <div class="col-xs-9">
-                <a class="name" href="/profile">ACI customers continue to steadily grow</a>
-              </div>
-          </li>
-          <li class="list-group-item clearfix">
-              <div class="col-xs-3">
-                <a href="/profile"><img src="https://www.gravatar.com/avatar/3923ecf12a5f69a3ddf00d4ba6192ac0?s=64&amp;d=identicon&amp;r=PG"></a>
-              </div>
-              <div class="col-xs-9">
-                <a class="name" href="/profile">ACI customers continue to steadily grow</a>
-              </div>
-          </li>
-
-        </ul>
-    </div>
-    </div>
-
   </div>
-</div>
-</div>
-
-{% endblock content %}
+{% endblock %}
