--- a/nexus9k/static/css/site.css
+++ b/nexus9k/static/css/site.css
@@ -1,20 +1,21 @@
-/*Main Header */
+/*Main Header start*/
 
-.navbar-nexus{
-  background-color: #435869;border-radius: 0px;border:none;
-}
+
+.navbar-nexus .navbar-brand{padding:15px;}
 .navbar-nexus .navbar-brand > img{display: inline}
-.navbar-nexus .navbar-brand{height: auto;}
 .navbar-nexus .navbar-brand:hover, .navbar-nexus .navbar-brand:focus{color:#fff;}
-.navbar-nexus .navbar-nav > li > a {
-    color: #fff;
-  font-size: 16px;
-}
-.navbar-nexus .navbar-brand{color: #fff}
-.navbar-nexus .form-control{background-color: transparent;color:#fff;}
+.navbar-nexus .form-control{color:#fff;}
 .navbar-nexus .nav.navbar-nav, .navbar-form{
   padding: 15px 0 15px 0;
 }
+.navbar-nexus .navbar-nav > li > a {
+  padding-bottom: 0px;
+ padding-top: 0px;
+}
+.navbar-nexus .nav.navbar-nav{
+  padding: 30px 0px;
+}
+
 
 /*Main Footer*/
 .footer {
