--- a/nexus9k/templates/modules/header.html
+++ b/nexus9k/templates/modules/header.html
@@ -30,12 +30,12 @@
         <li><a href="{% url 'login' %}">SignIn</a></li>
 
       </ul>
-      <form class="navbar-form navbar-right" role="search">
+      {% comment %}<form class="navbar-form navbar-right" role="search">
         <div class="form-group">
           <input type="text" class="form-control input-sm" placeholder="Search">
         </div>
 
-      </form>
+      </form>{% endcomment %}
 
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
