--- a/nexus9k/templates/article.html
+++ b/nexus9k/templates/article.html
@@ -55,7 +55,9 @@
                   <img src="https://devcentral.f5.com/profilepic.ashx?userid=114104&amp;w=64&amp;h=64"
                        class="avatar">
                   <h4>
-                    <a href="/article">Converting NXOS Standalone Mode</a>
+                    <a href="/profile">David Pruitt</a> <span class="points"><i class="fa fa-bolt"></i> 1,200</span> ·
+                    <span class="text-muted">Principal Architect</span>
+                    <small class="pull-right">3rd Nov, 2014</small>
                   </h4>
 
                   <p>
@@ -70,7 +72,9 @@
                   <img src="https://devcentral.f5.com/profilepic.ashx?userid=114104&amp;w=64&amp;h=64"
                        class="avatar">
                   <h4>
-                    <a href="/article">Converting NXOS Standalone Mode</a>
+                    <a href="/profile">David Pruitt</a> <span class="points"><i class="fa fa-bolt"></i> 1,200</span> ·
+                    <span class="text-muted">Principal Architect</span>
+                    <small class="pull-right">3rd Nov, 2014</small>
                   </h4>
 
                   <p>
@@ -117,6 +121,7 @@
                 <p>Zach has been immersed in the network world for over 20 years. He enjoys designing complex systems
                   and building sustainable infastructure. He occasionally delves into web vulnerabilities and denial of
                   service attacks evolving threat analysis, attack signature development and product hacking.</p>
+                <a href="#">Read more from Zach Beane »</a>
               </div>
 
 
@@ -126,33 +131,36 @@
         <div class="row">
 
           <div class="col-xs-12">
-            <h4>Related Articles</h4>
-            <hr/>
-            <div class="list-group">
+            <div class="panel panel-default panel-transparent">
+              <div class="panel-heading">RELATED ARTICLES</div>
+              <div class="panel-body">
+                <div class="list-group">
 
-              <div class="list-group-item">
+              <span class="list-group-item">
+                <img src="http://www.gravatar.com/avatar/bc4ab438f7a4ce1c406aadc688427f2c" alt="@mdo" width="40"
+                     height="40">
+                  <a><h4>ACI customers continue to steadily grow</h4></a>
+              </span>
+              <span class="list-group-item">
+                <img src="http://www.gravatar.com/avatar/a98244cbdacaf1c0b55499466002f7a8" alt="@mdo" width="40"
+                     height="40">
+                  <a><h4>Converting NXOS Standalone Mode</h4></a>
+              </span>
+              <span class="list-group-item">
+                <img src="http://www.gravatar.com/avatar/edec428c425453955f770095a7d26c50" alt="@mdo" width="40"
+                     height="40">
+                  <a><h4>Cisco adds support for EVPN VXLAN to Nexus 9000</h4></a>
+              </span>
 
-                <a href="https://github.com/mdo">
-                  <img src="http://www.gravatar.com/avatar/bc4ab438f7a4ce1c406aadc688427f2c" alt="@mdo" width="32"
-                       height="32">
-                  <strong>ACI customers continue to steadily grow</strong>
-                </a>
+
+                </div>
               </div>
-
-              <div class="list-group-item">
-
-                <a href="https://github.com/fat">
-                  <img src="http://www.gravatar.com/avatar/a98244cbdacaf1c0b55499466002f7a8" alt="@fat" width="32"
-                       height="32">
-                  <strong>Converting NXOS Standalone Mode</strong>
-                </a>
-              </div>
-
 
             </div>
           </div>
         </div>
       </div>
     </div>
+  </div>
   </div>
 {% endblock %}
