--- a/nexus9k/templates/script.html
+++ b/nexus9k/templates/script.html
@@ -57,7 +57,9 @@
                   <img src="https://devcentral.f5.com/profilepic.ashx?userid=114104&amp;w=64&amp;h=64"
                        class="avatar">
                   <h4>
-                    <a href="/article">Converting NXOS Standalone Mode</a>
+                    <a href="/profile">David Pruitt</a> <span class="points"><i class="fa fa-bolt"></i> 1,200</span> ·
+                    <span class="text-muted">Principal Architect</span>
+                    <small class="pull-right">3rd Nov, 2014</small>
                   </h4>
 
                   <p>
@@ -72,7 +74,9 @@
                   <img src="https://devcentral.f5.com/profilepic.ashx?userid=114104&amp;w=64&amp;h=64"
                        class="avatar">
                   <h4>
-                    <a href="/article">Converting NXOS Standalone Mode</a>
+                    <a href="/profile">David Pruitt</a> <span class="points"><i class="fa fa-bolt"></i> 1,200</span> ·
+                    <span class="text-muted">Principal Architect</span>
+                    <small class="pull-right">3rd Nov, 2014</small>
                   </h4>
 
                   <p>
@@ -103,103 +107,87 @@
       <div class="col-md-4">
         <div class="row">
           <div class="col-xs-12">
-            <h4>Top Contributors</h4>
-            <hr/>
-            <div class="list-group bs-team">
+            <div class="panel panel-default panel-transparent">
+              <div class="panel-heading">Recent Activity</div>
+              <div class="panel-body">
+                <div class="list-group">
+              <span class="list-group-item">
+                <img src="http://www.gravatar.com/avatar/bc4ab438f7a4ce1c406aadc688427f2c" alt="@mdo" width="40"
+                     height="40">
+                  <strong>David Pruitt</strong>
+                  <span class="points pull-right"><i class="fa fa-bolt"></i> <strong>1,200</strong></span>
+                <div class="text-muted">Principal Architect</div>
+              </span>
+              <span class="list-group-item">
+                <img src="http://www.gravatar.com/avatar/a98244cbdacaf1c0b55499466002f7a8" alt="@mdo" width="40"
+                     height="40">
+                  <strong>Mark Terrel</strong>
+                  <span class="points pull-right"><i class="fa fa-bolt"></i> <strong>1,150</strong></span>
+                <div class="text-muted">Sr. Director</div>
+              </span>
+              <span class="list-group-item">
+                <img src="http://www.gravatar.com/avatar/edec428c425453955f770095a7d26c50" alt="@mdo" width="40"
+                     height="40">
+                  <strong>Maxim Zavodchik</strong>
+                  <span class="points pull-right"><i class="fa fa-bolt"></i> <strong>9,234</strong></span>
+                <div class="text-muted">Engineer</div>
+              </span>
+              <span class="list-group-item">
+                <img src="http://www.gravatar.com/avatar/0f7dd3ce58a416be5685ea6194f82b11" alt="@mdo" width="40"
+                     height="40">
+                  <strong>Jason Rahm</strong>
+                  <span class="points pull-right"><i class="fa fa-bolt"></i> <strong>1,092</strong></span>
+                <div class="text-muted">Data Specialist</div>
+              </span>
 
-              <div class="list-group-item">
-
-                <a class="team-member" href="https://github.com/mdo">
-                  <img src="http://www.gravatar.com/avatar/bc4ab438f7a4ce1c406aadc688427f2c" alt="@mdo" width="32"
-                       height="32">
-                  <strong>Mark Otto</strong>
-                  <small>@mdo</small>
-                </a>
+                </div>
               </div>
-
-              <div class="list-group-item">
-
-                <a class="team-member" href="https://github.com/fat">
-                  <img src="http://www.gravatar.com/avatar/a98244cbdacaf1c0b55499466002f7a8" alt="@fat" width="32"
-                       height="32">
-                  <strong>Jacob Thornton</strong>
-                  <small>@fat</small>
-                </a>
-              </div>
-
-              <div class="list-group-item">
-
-                <a class="team-member" href="https://github.com/cvrebert">
-                  <img src="http://www.gravatar.com/avatar/edec428c425453955f770095a7d26c50" alt="@cvrebert" width="32"
-                       height="32">
-                  <strong>Chris Rebert</strong>
-                  <small>@cvrebert</small>
-                </a>
-              </div>
-
-              <div class="list-group-item">
-
-                <a class="team-member" href="https://github.com/juthilo">
-                  <img src="http://www.gravatar.com/avatar/0f7dd3ce58a416be5685ea6194f82b11" alt="@juthilo" width="32"
-                       height="32">
-                  <strong>Julian Thilo</strong>
-                  <small>@juthilo</small>
-                </a>
-              </div>
-
-              <div class="list-group-item">
-
-                <a class="team-member" href="https://github.com/xhmikosr">
-                  <img src="http://www.gravatar.com/avatar/e37759b1ea0125d4e97b1e00b5eed26f" alt="@xhmikosr" width="32"
-                       height="32">
-                  <strong>XhmikosR</strong>
-                  <small>@xhmikosr</small>
-                </a>
-              </div>
-
-              <div class="list-group-item">
-
-                <a class="team-member" href="https://github.com/hnrch02">
-                  <img src="http://www.gravatar.com/avatar/0d53f5d3d3d28bd470f394d98f7ef48f" alt="@hnrch02" width="32"
-                       height="32">
-                  <strong>Heinrich Fenkart</strong>
-                  <small>@hnrch02</small>
-                </a>
-              </div>
-
-              <div class="list-group-item">
-
-                <a class="team-member" href="https://github.com/patrickhlauke">
-                  <img src="http://www.gravatar.com/avatar/357f279672db832fc41a5a2f36559fcb" alt="@patrickhlauke"
-                       width="32" height="32">
-                  <strong>Patrick H. Lauke</strong>
-                  <small>@patrickhlauke</small>
-                </a>
-              </div>
-
             </div>
+
           </div>
         </div>
         <div class="row">
           <div class="col-xs-12">
-            <h4>Commit History</h4>
-            <hr/>
-            <div class="list-group">
-              <a href="#" class="list-group-item">
-                <h5 class="list-group-item-heading">Lori MacVittie commented on Converting NXOS Standalone:</h5>
+            <div class="panel panel-default panel-transparent">
+              <div class="panel-heading">Recent Activity</div>
+              <div class="panel-body">
+                <div class="list-group">
+              <span class="list-group-item">
+                <h5 class="list-group-item-heading">
+                  <a href="#">mikecohen</a> modified <a href="#">automate_softwate_patch.py</a>:
+                </h5>
 
-                <p class="list-group-item-text">How do you get it to boot without going to loader everytime?</p>
-              </a>
-              <a href="#" class="list-group-item">
-                <h5 class="list-group-item-heading">Lori MacVittie commented on Converting NXOS Standalone:</h5>
+                <p class="list-group-item-text">
+                  <span class="text-muted">Merge pull request #9 from datacenter/nexus9000</span>
+                  <br>
+                  <small>3 hours Ago · <a href="#">view entry</a></small>
+                </p>
+              </span>
+              <span class="list-group-item">
+                <h5 class="list-group-item-heading">
+                  <a href="#">mikecohen</a> modified <a href="#">automate_softwate_patch.py</a>:
+                </h5>
 
-                <p class="list-group-item-text">How do you get it to boot without going to loader everytime?</p>
-              </a>
-              <a href="#" class="list-group-item">
-                <h5 class="list-group-item-heading">Lori MacVittie commented on Converting NXOS Standalone:</h5>
+                <p class="list-group-item-text">
+                  <span class="text-muted">Merge pull request #9 from datacenter/nexus9000</span>
+                  <br>
+                  <small>3 hours Ago · <a href="#">view entry</a></small>
+                </p>
+              </span>
+              <span class="list-group-item">
+                <h5 class="list-group-item-heading">
+                  <a href="#">mikecohen</a> modified <a href="#">automate_softwate_patch.py</a>:
+                </h5>
 
-                <p class="list-group-item-text">How do you get it to boot without going to loader everytime?</p>
-              </a>
+                <p class="list-group-item-text">
+                  <span class="text-muted">Merge pull request #9 from datacenter/nexus9000</span>
+                  <br>
+                  <small>3 hours Ago · <a href="#">view entry</a></small>
+                </p>
+              </span>
+                </div>
+              </div>
+              <div class="panel-footer"><a href="#">See all activity »</a></div>
             </div>
           </div>
         </div>
