--- a/nexus9k/templates/scripts.html
+++ b/nexus9k/templates/scripts.html
@@ -246,54 +246,75 @@
     </div>
   </div>
 
-
+  <nav>
+    <ul class="pagination">
+      <li><a href="#" aria-label="Previous"><span aria-hidden="true">«</span></a></li>
+      <li><a href="#">1</a></li>
+      <li><a href="#">2</a></li>
+      <li><a href="#">3</a></li>
+      <li><a href="#">4</a></li>
+      <li><a href="#">5</a></li>
+      <li><a href="#" aria-label="Next"><span aria-hidden="true">»</span></a></li>
+    </ul>
+  </nav>
   </div>
 
   <div class="col-md-4">
     <div class="row">
       <div class="col-xs-12">
-        <h4>Recent Activity</h4>
-        <hr/>
-        <div class="list-group">
-          <a href="#" class="list-group-item">
-            <h5 class="list-group-item-heading">Lori MacVittie commented on Converting NXOS Standalone:</h5>
+        <div class="panel panel-default panel-transparent">
+          <div class="panel-heading">Recent Activity</div>
+          <div class="panel-body">
+            <div class="list-group">
+          <span class="list-group-item">
+            <h5 class="list-group-item-heading">
+              <a href="#">Lori MacVittie</a> commented on <a href="#">Converting NXOS Standalone</a>:
+            </h5>
 
-            <p class="list-group-item-text">How do you get it to boot without going to loader everytime?</p>
-          </a>
-          <a href="#" class="list-group-item">
-            <h5 class="list-group-item-heading">Lori MacVittie commented on Converting NXOS Standalone:</h5>
+            <p class="list-group-item-text">
+              <span class="text-muted">How do you get it to boot without going to loader everytime?</span>
+              <br>
+              <small>3 hours Ago · <a href="#">view entry</a></small>
+            </p>
+          </span>
+          <span class="list-group-item">
+            <h5 class="list-group-item-heading">
+              <a href="#">Lori MacVittie</a> commented on <a href="#">Converting NXOS Standalone</a>:
+            </h5>
 
-            <p class="list-group-item-text">How do you get it to boot without going to loader everytime?</p>
-          </a>
-          <a href="#" class="list-group-item">
-            <h5 class="list-group-item-heading">Lori MacVittie commented on Converting NXOS Standalone:</h5>
+            <p class="list-group-item-text">
+              <span class="text-muted">How do you get it to boot without going to loader everytime?</span>
+              <br>
+              <small>3 hours Ago · <a href="#">view entry</a></small>
+            </p>
+          </span>
+            <span class="list-group-item">
+            <h5 class="list-group-item-heading">
+              <a href="#">Lori MacVittie</a> commented on <a href="#">Converting NXOS Standalone</a>:
+            </h5>
 
-            <p class="list-group-item-text">How do you get it to boot without going to loader everytime?</p>
-          </a>
+            <p class="list-group-item-text">
+              <span class="text-muted">How do you get it to boot without going to loader everytime?</span>
+              <br>
+              <small>3 hours Ago · <a href="#">view entry</a></small>
+            </p>
+          </span>
+            <span class="list-group-item">
+            <h5 class="list-group-item-heading">
+              <a href="#">Lori MacVittie</a> commented on <a href="#">Converting NXOS Standalone</a>:
+            </h5>
+
+            <p class="list-group-item-text">
+              <span class="text-muted">How do you get it to boot without going to loader everytime?</span>
+              <br>
+              <small>3 hours Ago · <a href="#">view entry</a></small>
+            </p>
+          </span>
+            </div>
+          </div>
+          <div class="panel-footer"><a href="#">See all activity »</a></div>
         </div>
-      </div>
-    </div>
-    <div class="row">
-      <div class="col-xs-12">
-        <h4>Recent Comments</h4>
-        <hr/>
-        <div class="list-group">
-          <a href="#" class="list-group-item">
-            <h5 class="list-group-item-heading">Lori MacVittie commented on Converting NXOS Standalone:</h5>
 
-            <p class="list-group-item-text">How do you get it to boot without going to loader everytime?</p>
-          </a>
-          <a href="#" class="list-group-item">
-            <h5 class="list-group-item-heading">Lori MacVittie commented on Converting NXOS Standalone:</h5>
-
-            <p class="list-group-item-text">How do you get it to boot without going to loader everytime?</p>
-          </a>
-          <a href="#" class="list-group-item">
-            <h5 class="list-group-item-heading">Lori MacVittie commented on Converting NXOS Standalone:</h5>
-
-            <p class="list-group-item-text">How do you get it to boot without going to loader everytime?</p>
-          </a>
-        </div>
       </div>
     </div>
 
