Removed unnecessary links to stylesheets.

--- a/nexus9k/templates/qa/newquestion.html
+++ b/nexus9k/templates/qa/newquestion.html
@@ -4,9 +4,7 @@
 {% block site-title %}Scripts{% endblock %}
 
 {% block content %}
-  <link rel="stylesheet" href="{% static 'css/site.css' %}">
-  <link rel="stylesheet" href="{% static 'bower_components/bootstrap/dist/css/bootstrap.min.css' %}">
-  <div class="container main-content">
+  <div class="container">
 
 
     <div class="row">
