--- a/nexus9k/templates/qa/question.html
+++ b/nexus9k/templates/qa/question.html
@@ -6,9 +6,6 @@
 {% block content %}
 
   <div class="container">
-    <link rel="stylesheet" href="{% static 'css/site.css' %}">
-    <link rel="stylesheet" href="{% static 'bower_components/bootstrap/dist/css/bootstrap.min.css' %}">
-
     <div class="row">
       <div class="col-md-9 col-sm-12">
         <div class="row">
@@ -70,7 +67,7 @@
         <div class="row">
           <div class="col-md-12">
             <div class="row"><h3>Comments</h3></div>
-            <div class="list-group row blockelement">
+            <div class="list-group row">
               <a href="#" class="list-group-item">
                 Dapibus ac facilisis in
                 <span class="text-muted pull-right"><span class="glyphicon glyphicon-user"></span> Jane Doe (Friday, 17 April 2015)</span>
